--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,5 +16,11 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+dependencies = [
+    "requests"
+]
+
+[project.optional-dependencies]
+tests = ["pytest", "pytest-cov", "requests-mock", "pytest-flakes"]
 
 [tool]
