--- a/.ruff.toml
+++ b/.ruff.toml
@@ -9,10 +9,13 @@ select = [
 
 ignore = [
     "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
+    "ANN202", # Missing return type for private functions allowed
     "D203", # no-blank-line-before-class (incompatible with formatter)
     "D212", # multi-line-summary-first-line (incompatible with formatter)
     "COM812", # incompatible with formatter
     "ISC001", # incompatible with formatter
+    "PGH003", # Ignore long-lines,
+    "E501", # Ignore long docstring lines
 ]
 
 [lint.per-file-ignores]
@@ -23,7 +26,11 @@ ignore = [
     "PLR2004", # Magic value used in comparison, ...
     "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
     "D104", # Don't care all that much about docs in tests
-    "D100" # Don't care all that much about docs in tests
+    "D100", # Don't care all that much about docs in tests,
+    "ANN201", # Don't care all that much about docs in tests
+    "D103", # Don't care all that much about docs in tests
+    "ANN001", # Don't care about typing in tests
+    "SLF001", # Private Member access is expected in tests
 ]
 
 [lint.flake8-pytest-style]
